--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "grading-tools"]
 	path = grading-tools
 	url = git@github.com:TUDelft-IN4303/grading-tools.git
-	branch = master
+	branch = sunshine-master
 [submodule "spt"]
 	path = spt
 	url = git@github.com:TUDelft-IN4303/spt.git
-	branch = master
+	branch = sunshine-master
 [submodule "spoofax-sunshine"]
 	path = spoofax-sunshine
 	url = git@github.com:metaborg/spoofax-sunshine.git
