--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "grading-tools"]
 	path = grading-tools
-	url = git@github.com:TUDelft-IN4303/grading-tools.git
+	url = https://github.com/TUDelft-IN4303/grading-tools.git
 	branch = sunshine-master
 [submodule "spt"]
 	path = spt
-	url = git@github.com:TUDelft-IN4303/spt.git
+	url = https://github.com/TUDelft-IN4303/spt.git
 	branch = sunshine-master
 [submodule "spoofax-sunshine"]
 	path = spoofax-sunshine
-	url = git@github.com:metaborg/spoofax-sunshine.git
+	url = https://github.com/metaborg/spoofax-sunshine.git
 	branch = master
