--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,11 @@
 	path = spoofax-sunshine
 	url = https://github.com/metaborg/spoofax-sunshine.git
 	branch = master
+[submodule "spt"]
+	path = spt
+	url = https://github.com/metaborg/spt.git
+	branch = master
+[submodule "spoofax"]
+	path = spoofax
+	url = https://github.com/metaborg/spoofax.git
+	branch = master
