--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 	branch = master
 [submodule "spt"]
 	path = spt
-	url = https://github.com/metaborg/spt.git
+	url = https://github.com/MartijnDwars/spt.git
 	branch = ignore-errors-regions
 [submodule "spoofax"]
 	path = spoofax
