Use metaborg spt

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,11 +5,11 @@
 [submodule "spoofax-sunshine"]
 	path = spoofax-sunshine
 	url = https://github.com/metaborg/spoofax-sunshine.git
-	branch = master
+	branch = in4303
 [submodule "spt"]
 	path = spt
-	url = https://github.com/MartijnDwars/spt.git
-	branch = in4303
+	url = https://github.com/metaborg/spt.git
+	branch = ignore-errors-regions
 [submodule "spoofax"]
 	path = spoofax
 	url = https://github.com/metaborg/spoofax.git
